added head info

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <link rel="stylesheet" type="text/css" href="styles.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Yikes!! My First Flight! by Shareese Washington</title>
    </head>
    <body>
       <!-- Write your HTML in this file! -->
